fix: fix brand weight and align center

--- a/src/ui/component/AddressList/style.less
+++ b/src/ui/component/AddressList/style.less
@@ -72,6 +72,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    font-weight: 500;
   }
   .ant-input {
     width: 102px;
